# 2bshrd

./: .gitignore  README.md  build.py  install.sh  pyproject.toml  requirements.txt  run.py
shrd/: __init__.py  __main__.py  config.py  discovery.py  protocol.py  send_file.py  shell_integration.py  transfer.py
shrd/gui/: __init__.py  file_browser.py  settings.py  tray.py
