[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "2bshrd"
version = "0.1.0"
description = "Cross-platform file sharing with Windows Explorer integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "2bshrd"}
]
keywords = ["file-sharing", "transfer", "network", "windows", "linux"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: File Sharing",
]
dependencies = [
    "PySide6>=6.6.0",
    "cryptography>=41.0.0",
    "zeroconf>=0.131.0",
    "aiofiles>=23.2.1",
    "qasync>=0.27.1",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
2bshrd = "shrd.__main__:main"

[project.gui-scripts]
2bshrd-gui = "shrd.__main__:main"

[tool.setuptools.packages.find]
include = ["shrd*"]
